5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1838_2602.log
== TEST (2019-06-26 12:41:26) 
-- CODE:

from numpy.linalg import *

v = array(eval(input())).T

m = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

p = dot(inv(m), v)

print("estafilococo:", round(p[0], 1))
print("salmonela:", round(p[1], 1))
print("coli:", round(p[2], 1))

if p[0] == min(p):
    print("estafilococo")
elif p[1] == min(p):
    print("salmonela")
elif p[2] == min(p):
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:41:30) 
-- CODE:

from numpy.linalg import *

v = array(eval(input())).T

m = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

p = dot(inv(m), v)

print("estafilococo:", round(p[0], 1))
print("salmonela:", round(p[1], 1))
print("coli:", round(p[2], 1))

if p[0] == min(p):
    print("estafilococo")
elif p[1] == min(p):
    print("salmonela")
elif p[2] == min(p):
    print("coli")
-- EXECUTION TIME:
0.99894
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2602/main.py", line 4, in <module>
    v = array(eval(input())).T
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:46:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

v = array(eval(input())).T

m = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

p = dot(inv(m), v)

print("estafilococo:", round(p[0], 1))
print("salmonela:", round(p[1], 1))
print("coli:", round(p[2], 1))

if p[0] == min(p):
    print("estafilococo")
elif p[1] == min(p):
    print("salmonela")
elif p[2] == min(p):
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:47:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

v = array(eval(input())).T

m = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

p = dot(inv(m), v)

print("estafilococo:", round(p[0], 1))
print("salmonela:", round(p[1], 1))
print("coli:", round(p[2], 1))

if p[0] == min(p):
    print("estafilococo")
elif p[1] == min(p):
    print("salmonela")
elif p[2] == min(p):
    print("coli")
-- EXECUTION TIME:
0.857322
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
